tests/miniJava/neg/001423_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int [ return 0 ] ; } }
